Adds preview button on right corner

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,3 +1,4 @@
+<button {{action 'togglePreview'}} class="ui basic right floated orange button" data-tooltip="Toggle Preview" data-position="left center"><h3>{{prevButton}}</h3></button>
 <div class="ui grid">
     <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
         <div class="main-container create-badge segments">
@@ -10,7 +11,6 @@
                             </div>
                             <div class="right floated right aligned six wide column">
                                 <div class="ui">
-                                <button {{action 'togglePreview'}} class="ui basic orange button" data-tooltip="Toggle Preview (WIP)" data-position="right center">{{prevButton}}</button>
                                 </div>
                             </div>
                         </div>
