--- a/frontend/app/templates/components/user-component/preview.hbs
+++ b/frontend/app/templates/components/user-component/preview.hbs
@@ -1,5 +1,5 @@
-<div class="ui raised segment">
-    <div class="bgImg"
+<div class="ui basic segment">
+    <div class="bgImg ui raised segment"
         style="color: #{{defColor}};
         background-size: cover;
         background-repeat: no-repeat;
