Fix the Visibility of Admin Tabs

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -165,7 +165,7 @@
             {{/if}}
         </div>
     </div>
-    <div class="{{if previewToggled 'five' 'hidden'}} wide column preview">
+    <div class="{{if previewToggled 'five' 'hide'}} wide column preview">
         <!--Add Preview Section here-->
         {{ user-component/preview fn=firstName ln=lastName org=organization sh=socialHandle
             desg=designation defColor=defFontColor font_fn=defFont1Size font_ln=defFont2Size
