Fixes #1510 : Modified mail templates in cloud functions

--- a/frontend/app/templates/admin.hbs
+++ b/frontend/app/templates/admin.hbs
@@ -19,6 +19,9 @@
       {{#link-to 'admin.content' class='item'}}
         {{'Content'}}
       {{/link-to}}
+      {{#link-to 'admin.messages' class='item'}}
+        {{'Messages'}}
+      {{/link-to}}
       {{#link-to 'admin.modules' class='item'}}
         {{'Modules'}}
       {{/link-to}}
