--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -95,7 +95,7 @@
                       </div>
                     <div class="content">
                         <div class="center aligned">
-                            {{ background-component/image-component sendImage=(action 'mutateCustomImage') }}
+                            {{ background-component/image-component imageData=imageData sendImage=(action 'mutateCustomImage') }}
                         </div>
                     </div>
                 </div>
