Added Sorted Functionality in Badges Admin Panel

--- a/frontend/app/templates/components/badge-table.hbs
+++ b/frontend/app/templates/components/badge-table.hbs
@@ -4,7 +4,7 @@
             <th>Badge Creator Name</th>
             <th>Badge Name</th>
             <th>Created At</th>
-            <th class="no-sort">Deleted At</th>
+            <th>Deleted At</th>
             <th class="no-sort center aligned">Actions</th>
         </tr>
     </thead>
