--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -185,6 +185,7 @@
             backImg=prevImageData
             defImage=defImage
             custImage=custImage
+            previewHeight=previewHeight
         }}
     </div>
 </div>
