Uses semantic ui icon for toggle

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,4 +1,4 @@
-<button {{action 'togglePreview'}} class="ui basic right floated orange button" data-tooltip="Toggle Preview" data-position="left center"><h3>{{prevButton}}</h3></button>
+<button {{action 'togglePreview'}} class="ui basic right floated orange button" data-tooltip="Toggle Preview" data-position="left center"><i class="exchange icon"></i></button>
 <div class="ui grid">
     <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
         <div class="main-container create-badge segments">
