--- a/frontend/app/templates/components/data-component/name-component.hbs
+++ b/frontend/app/templates/components/data-component/name-component.hbs
@@ -1,3 +1,3 @@
 <div class="field">
-    {{input name="formNameData" value=formNameData placeholder="Add a name for your badges"}}
+    {{input name="formNameData" value=formNameData placeholder="My Badge"}}
 </div>
