--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -113,7 +113,7 @@
                     <div class="ui horizontal divider"></div>
                     <div class="content">
                         <div class="center aligned">
-                            {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor')}}
+                            {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor') fontColor=fontColor}}
                         </div>
                     </div>
                     <div class="ui horizontal divider"></div>
