--- a/frontend/app/templates/components/user-component/preview.hbs
+++ b/frontend/app/templates/components/user-component/preview.hbs
@@ -1,6 +1,7 @@
 <div class="ui raised segment">
     <div class="bgImg"
         style="color: #{{defColor}};
+        background-color: #{{backColor}};
         background-size: cover;
         background-repeat: no-repeat;
         height: {{if previewHeight '475' '600'}}px;
