--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -174,6 +174,7 @@
             org=organization
             sh=socialHandle
             desg=designation
+            backColor=backColor
             defColor=defFontColor
             font_fn=defFont1Size
             font_ln=defFont2Size
