--- a/frontend/app/templates/components/badge-name.hbs
+++ b/frontend/app/templates/components/badge-name.hbs
@@ -1,6 +1,6 @@
-<form class="ui form" {{action 'updateBadgeName' badge on="submit"}}>
+<form class="ui form" {{action 'updateBadgeName' on="submit"}}>
     <div class="ui field">
-        {{input type="text" id="Name" name=Name value=badge.badge_name }}
+        {{input type="text" value=badge.badge_name }}
     </div>
-    <button type=submit class="ui button" tabindex="0"><i class="pencil alternate icon"></i></button>
+    <button type='submit' class="ui button" tabindex="0"><i class="pencil alternate icon"></i></button>
 </form>
