--- a/frontend/app/templates/my-badges.hbs
+++ b/frontend/app/templates/my-badges.hbs
@@ -1,3 +1,3 @@
 <div class="my-badge-width">
-    {{user-component/my-badges model=model user=user session=session sendbadgeId=(action 'deleteBadge' badge) sendBadgeName=(action 'updateBadgeName' badge)}}
+    {{user-component/my-badges model=model user=user session=session sendbadgeId=(action 'deleteBadge') sendBadgeName=(action 'updateBadgeName')}}
 </div>
