Added Logout Icon Just like eventyay

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -23,7 +23,7 @@
                         {{/link-to}}
                     {{/if}}
                     <div class="divider"></div>
-                    <a class="large item navbar-dropdown upper" {{action 'logOut'}}>Logout</a>
+                    <a class="large item navbar-dropdown upper" {{action 'logOut'}}>Logout<i class="right aligned sign out alternate icon pull-right"></i></a>
                 </div>
             {{/ui-dropdown}}
         {{else}}
