--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,4 +1,8 @@
-<button {{action 'togglePreview'}} class="ui basic right floated orange button" data-tooltip="Toggle Preview" data-position="left center"><i class="exchange icon"></i></button>
+<div class="ui grid">
+<div class="right floated right aligned two wide column">
+<button {{action 'togglePreview'}} class="tiny ui basic orange button" data-tooltip="Toggle Preview" data-position="left center"><i class="exchange icon"></i></button>
+</div>
+</div>
 <div class="ui grid">
     <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
         <div class="main-container create-badge segments">
@@ -165,7 +169,7 @@
             {{/if}}
         </div>
     </div>
-    <div class="{{if previewToggled 'five' 'hide'}} wide column preview">
+    <div class="{{if previewToggled 'six' 'hide'}} wide column preview">
         <!--Add Preview Section here-->
         {{
             user-component/preview
