Added Correct Label for Font Size

--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -1,5 +1,5 @@
 <div class="field">
-  <label>Select Font</label>
+  <label>Select Different Font Size</label>
 </div>
 <div class="ui centered grid">
   <div class="three column row">
