Makes badges preview appear same

--- a/frontend/app/templates/components/user-component/preview.hbs
+++ b/frontend/app/templates/components/user-component/preview.hbs
@@ -1,5 +1,5 @@
-<div class="ui raised segment">
-    <div class="bgImg"
+<div class="ui basic segment">
+    <div class="bgImg ui raised segment"
         style="color: #{{defColor}};
         background-color: #{{backColor}};
         background-size: cover;
