--- a/frontend/app/templates/components/badge-name.hbs
+++ b/frontend/app/templates/components/badge-name.hbs
@@ -1,6 +1,6 @@
 <form class="ui form" {{action 'updateBadgeName' on="change"}}>
     <div class="ui icon input">
-    <i class="pencil alternate icon"></i>
+    <i class="pen square icon"></i>
         {{input type="text" value=badge.badge_name }}
     </div>
 </form>
