Fixes #1593 : Added basic size information of badge size

--- a/frontend/app/templates/components/badge-component/badge-size.hbs
+++ b/frontend/app/templates/components/badge-component/badge-size.hbs
@@ -2,13 +2,13 @@
   <div class="field">
     <div class="ui radio checkbox" onclick={{action 'mutateBadgeSize' '4x3'}}>
       <input name="badge" value="4x3" type="radio">
-      <label>4X3</label>
+      <label>4"x3"</label>
     </div>
   </div>
   <div class="field">
     <div class="ui radio checkbox" onclick={{action 'mutateBadgeSize' '4.5x4'}}>
       <input name="badge" value="4.5x4" type="radio">
-      <label>4.5X4</label>
+      <label>4.5"x4"</label>
     </div>
   </div>
 </div>
