Fixes #1607 : Added badge deletion count in reports

--- a/frontend/app/templates/admin/reports/list.hbs
+++ b/frontend/app/templates/admin/reports/list.hbs
@@ -4,6 +4,7 @@
             <th>Date</th>
             <th>Mails Sent</th>
             <th>Badges Generated</th>
+            <th>Badges Deleted</th>
             <th>Users Created</th>
             <th>Users Deleted</th>
         </tr>
@@ -14,6 +15,7 @@
                 <td data-sort-value={{extract-time-stamp report.id}}>{{sanitizeDate report.id}}</td>
                 <td data-sort-value={{report.mailSentCount}}>{{report.mailSentCount}}</td>
                 <td data-sort-value={{report.badgeCount}}>{{report.badgeCount}}</td>
+                <td data-sort-value={{report.badgeDeletionCount}}>{{report.badgeDeletionCount}}</td>
                 <td data-sort-value={{report.userCreationCount}}>{{report.userCreationCount}}</td>
                 <td data-sort-value={{report.userDeletionCount}}>{{report.userDeletionCount}}</td>
             </tr>
@@ -22,7 +24,7 @@
     {{#if allow}}
         <tfoot>
             <tr>
-                <th colspan="5">
+                <th colspan="6">
                     <div class="ui right floated pagination menu">
                         {{#if allow_prev}}
                             <a class="icon item" {{action 'prevPage'}}>
