Provided Helvetica as Default Font

--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -14,7 +14,7 @@
     <div class="center aligned column">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob"  onChange=(action (mut fonttype1))}}
-          <div class="default text">Select font from list</div>
+          <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
               <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
@@ -61,7 +61,7 @@
     <div class="center aligned column">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype2))}}
-          <div class="default text">Select font from list</div>
+          <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
               <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
@@ -108,7 +108,7 @@
     <div class="center aligned column">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype3))}}
-          <div class="default text">Select font from list</div>
+          <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
               <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
@@ -155,7 +155,7 @@
     <div class="center aligned column">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype4))}}
-          <div class="default text">Select font from list</div>
+          <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
               <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
@@ -202,7 +202,7 @@
     <div class="center aligned column">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype5))}}
-          <div class="default text">Select font from list</div>
+          <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
               <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
