--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,9 +1,9 @@
-<div class="ui grid">
+<div class="ui grid stackable">
 <div class="right floated right aligned two wide column">
 <button {{action 'togglePreview'}} class="tiny ui basic orange button" data-tooltip="Toggle Preview" data-position="left center"><i class="exchange icon"></i></button>
 </div>
 </div>
-<div class="ui grid">
+<div class="ui grid stackable mobile reversed">
     <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
         <div class="main-container create-badge segments">
             <div class="ui segment">
